# haskell-flake

./: .gitignore  CHANGELOG.md
examples/ifd-less-local/: flake.nix
examples/ifd-less-local/bar/: bar.cabal
examples/ifd-less-local/bar/src/: Main.hs
examples/ifd-less-local/foo/: default.nix  foo.cabal
examples/ifd-less-local/foo/src/: Foo.hs
examples/ifd-less-local/nix/: pre-commit.nix
nix/: build-haskell-package.nix
nix/modules/project/: defaults.nix
nix/modules/project/settings/: all.nix
test/simple/: flake.nix
