cabal-version:   3.0
name:            foo
version:         0.1.0.0
license:         NONE
author:          Joe
maintainer:      joe@example.com
build-type:      Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Foo
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
